0.62 2018xxxx
    + Fix the ->redirect URL to honor the specified host
      This prevents breakage due to localhost vs. 127.0.0.1 mixups
0.61 20171129
    + Make the "->download" method actually work in the sense that it will send
	  downloads with a name other than "$1".

0.60 20171127
    + Add method to "download" a file
	  This is in preparation for WWW::Mechanize::Chrome trying to download
	  a file
	! Rework IPC to launch the server
	  The old method of a pipe-open was elegant but didn't really work out for
	  cleanly shutting down the process. The new approach uses the same way
	  we spawn and dissociate Chrome in WWW::Mechanize::Chrome.
	. We are now more defensive about finding out whether CGI.pm can do
	  ->multi_param or not

0.59 20170617
    + Add support for checking Javascript properties if Javascript runs on the
      client
      Currently, this only mirrors back the window.navigator.userAgent variable

0.58 20170518
    ! Remove support for Perl 5.6.x
      The module uses a fancy way of opening a lexical filehandle which
      doesn't work on Perl 5.6.x. Instead of trying to figure out how to make
      5.6.x open() work with an undef lexial variable for a filehandle via
      Travis CI, I simply declare this module incompatible with 5.6.x.

0.57 20170508
    . Spun off from WWW::Mechanize::PhantomJS
      (and WWW::Mechanize::Firefox, and WWW::Mechanize::Shell)